{
    "name": "InputActions",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "bde18993-0d8d-40e9-a926-137eec2c7bbc",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "c39eee70-5040-4775-983f-d9f1adaa9299",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "7a2ebf1a-c1c6-498c-8339-4e5179075089",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "8ad5d613-ad77-46b2-94e9-7d98ed23e09a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Aim",
                    "type": "Button",
                    "id": "bbd9c46d-3252-4076-a17d-5943cc39b5d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "4f26f073-81e4-4430-bfc3-9da3fbee8417",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchMeleeWeapon",
                    "type": "Button",
                    "id": "aafc65d6-e8bb-434b-bb69-659b862d5629",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8466caa0-853f-4429-8add-c1606fad1744",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "2e09f254-bf66-4da9-8beb-649a4d85c349",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "62cf4ef9-076c-4c67-8d4c-4150e3728502",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6f1a2321-c18b-4f93-aaba-5db29b45bdf9",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "96860438-afa6-4907-8128-597cc701fe38",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e6961df6-2cc6-4797-bc18-321de89ba245",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c096904f-9df7-4491-aaf2-3c21e184c32c",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13c55b7e-b506-4b6c-a5fc-d4e045f37306",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "823b0949-68d9-4844-ac33-c9d5a6e60d75",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55cf5bf6-a17d-4ac9-beb3-b1bf1b8e417c",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c49b36bf-1ec8-42e0-b1ef-7ff07db51cbd",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c039e00c-2921-4932-9020-27ee0e6776fc",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60a83db4-d5c4-4293-ab8c-cfeeabc48737",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0792cc83-6be1-4497-88da-d2256fe08306",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "246d4672-f28a-48a6-a6f9-99bd7286cf75",
                    "path": "<Keyboard>/1",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchMeleeWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c9d7954-42dc-4197-bc79-0380e1a5e60b",
                    "path": "<Keyboard>/2",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchMeleeWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardAndMouse",
            "bindingGroup": "KeyboardAndMouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}